Themes/GGO_Kirito/core.css
/*
Theme Owned and Made by VaporousCreeper#9514
  
Background Img: https://wpblink.com/sites/default/files/wallpaper/anime/66761/sword-art-online-ii-wallpapers-hd-66761-327252.png 
Transparency2 Module: https://raw.githack.com/Ruben7173/Ruben7173.github.io/master/BetterDiscord-Themes/Modules/transparency2.css - By Ruben7173#5048

The 2 items above are not owned by me, They go to there respected owners
*/

:root{
    --background: url('https://images.alphacoders.com/632/632525.png');
    --activetext-colour: white;

    --primary1-colour: red;
    --primary2-colour: rgba(255,0,0,0.5);
    --primary3-colour: rgba(100,0,0,0.6);

    --secondary1-colour: rgba(50,50,50,0.3);
    --secondary2-colour: rgba(100,100,100,0.5);
    --secondary3-colour: rgba(0,0,0,0.5);

    --transparency-1: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
	--transparency-2: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
	--transparency-3: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
	--transparency-4: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
    --transparency-5: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
}

/*--------------------------------------------------------*/

/*Theme Itself*/
	/*Background Img*/
	#app-mount,
	#app-mount .container-16j22k {
		background-image: var(--background); 
		background-position: center; 
		background-size: cover; 
	}

	/*Home*/
	#app-mount .container-1r6BKw {background: transparent;}

	#app-mount .popoutContainer-3WC9HR:hover, 
	#app-mount .popoutContainer-3WC9HR .popout-3G62UL {
		background-color: var(--secondary3-colour)
	}

	#app-mount .item-3HknzM[aria-label="Add Friend"] {background-color: var(--primary1-colour)!important}
	#app-mount .item-3HknzM[style*="rgba(67, 181, 129, 0.2)"] {background-color: var(--primary2-colour)!important; color: var(--primary1-colour)!important;}

	#app-mount .container-1D34oG {
		background-color: transparent;
		background-image: var(--transparency-1)
	}

	#app-mount .wrapper-2qzCYF {background: transparent; border-bottom: 2px solid var(--primary3-colour);}
	#app-mount .centerButton-3CaNcJ {background-color: var(--secondary1-colour)}
	#app-mount .leaveButton-2YnTyt {background-color: var(--primary3-colour);}

	/*Servers*/
	#app-mount .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9 {background-color: var(--primary3-colour)}
	#app-mount .wrapper-1BJsBx .childWrapper-anI2G9 {
		background-color: var(--primary3-colour); 
		color: var(--activetext-colour);
	}

	#app-mount .circleIconButton-jET_ig {background-color: var(--secondary2-colour); color: var(--activetext-colour);}
	#app-mount .circleIconButton-jET_ig:hover {background-color: var(--primary3-colour)!important;}


	#app-mount .numberBadge-2s8kKX {background-color: var(--primary1-colour)!important}

	#app-mount .pill-31IEus .item-2hkk8m {background-color: var(--secondary1-colour)}
	#app-mount #bd-pub-li .wrapper-25eVIn {background-color: var(--secondary1-colour)}

	.folder .wrapper-1BJsBx {background-color: var(--secondary2-colour)!important; transition: background-color .15s ease-out;}
	.folder .wrapper-1BJsBx:hover {background-color: var(--primary3-colour)!important;}

	#app-mount .folder-21wGz3 {background-color: transparent;}
	#app-mount .expandedFolderBackground-2sPsd- {background-color: var(--secondary1-colour);}
	#app-mount .expandedFolderBackground-2sPsd-.collapsed-1GMuSb {
		background-color: transparent; 
		transition: background-color .15s ease-out;
	}
		/*Server Boosting*/
		#app-mount .perksModal-fSYqOq {background: var(--transparency-1);}

		#app-mount .ctaBar-2UsjF2 {background-color: var(--secondary1-colour); border-radius: 8px}
		#app-mount .tierMarkerBackground-3q29am {background-color: transparent;}

		#app-mount .carouselItemSelected-JFUsnG .tierBody-16Chc9 {background-color: var(--secondary1-colour);}
		#app-mount .perk-2WeBWW {background-color: var(--secondary1-colour);}
			/*ServerMenu*/
			#app-mount .tierHeaderLocked-1a2opw {background-color: var(--secondary3-colour);}
			#app-mount .tierBody-x9kBBp {background-color: var(--secondary1-colour);}


		/*Channels*/
		#app-mount .containerDefault-3GGEv_ {
			background-color: var(--primary3-colour); 
			height: 30px; text-align: center; 
			border-radius: 10px; 
			padding: 5px 5px 0 5px;
		}
		#app-mount .container-3baos1,
		#app-mount .activityPanel-28dQGo {
			background-image: var(--transparency-1); 
			background-color: rgba(0,0,0,0); 
			margin-bottom: 0;
		}

		#app-mount .containerDefault-3GGEv_ {margin-top: 15px;}
		#app-mount .unreadBar-3YD_k9 {background-color: var(--primary1-colour);}


			/*Text*/
			#app-mount .content-3at_AU:hover {width: 100%; background-color: var(--secondary2-colour)}
			#app-mount .selected-37j_iU .content-3at_AU {margin: 0; width: 100%; background-color: var(--secondary2-colour);}
			#app-mount .content-3at_AU {
				margin: 0; 
				width: 200px; 
				transition: width 0.2s; 
				transition-timing-function: ease-in-out; 
				background-color: var(--secondary1-colour)
			}

			#app-mount .containerDefault-1ZnADq .modeMuted-3osy7j div.content-3at_AU {background-color: var(--primary3-colour);}

				/*Embeds*/
				#app-mount .embedFull-2tM8-- {
					background-color: var(--secondary1-colour); 
					border-left: 4px solid;
					border-right: 4px solid;
					border-radius: 10px!important;
				}


			/*Voice*/
			#app-mount .containerDefault-1ZnADq .modeConnected-2IEL4z div.content-3at_AU {width: 100%; background-color: var(--secondary2-colour);}
			#app-mount .containerDefault-1ZnADq .modeLocked-SZJhTy div.content-3at_AU {background-color: var(--primary3-colour);}

				/*VC Info*/
				#app-mount .panels-j1Uci_ {background-color: transparent;}
				#app-mount .container-1giJp5 {background-color: var(--secondary3-colour);}
				#app-mount .button-14-BFJ[aria-label="Disconnect"] {background-color: var(--primary3-colour);}
/* ... */

